# shedding-light-static-partitioning-hypervisors

./: .gitmodules  Makefile  README.md  setup.mk
bao/: Makefile  README.md
bao/configs/: .gitignore
bao/lloader/: Makefile  aarch64.S  loader_aarch64.ld
docker/: Dockerfile
experiments/: .gitignore
experiments/boot/: README.md  boottime.py
experiments/comm/: README.md
experiments/irqlat/: README.md
experiments/loc/: README.md
experiments/mibench/: README.md  mibench.py
firmware/2021.2-zcu104-release/: bl31.elf  bl31.elf.original  bootgen-direct.bif  bootgen-interrupter.bif  bootgen.bif  bootgen.bif.original  pmufw.elf  system.dtb  u-boot-direct.elf  uboot-bao.env  uboot-freertos.env  uboot-jailhouse.env  uboot-linux.env  uboot-xen.env  uboot.env  zynqmp_fsbl.elf  zynqmp_fsbl.elf.orig
guests/comm/: Makefile
guests/freertos/: Makefile
guests/interf-single/: Makefile
guests/ipi/: Makefile
guests/irqstorm/: Makefile
guests/linux/: .gitignore  0001-allow-user-access-to-timer.patch  README.md  boot_test.c  linux-boot.dts  linux.dts
install/: .gitignore
install/boot/: uboot.env
jailhouse/: .gitignore  0001-add-boot-time-instrumentation.patch  0001-export-symbols-needed-by-jailhouse-s-module.patch  Makefile  README.md  config.h
jailhouse/configs/: .gitignore  boot.c  freertos.c  interf+col.c  interf-singlecore+col.c  interf-singlecore.c  interf.c  (+13 more)
sel4/: .gitignore  Makefile  README.md
sel4/configs/boot-linux/: CMakeLists.txt  settings.cmake
sel4/configs/boot-linux/zcu102/: devices.camkes
xen/: Makefile  README.md  xen-minimal-config
(+275 files in other folders)
